# diffmah

./: .gitignore  CHANGES.rst  README.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
diffmah/: __init__.py  _version.py  alt_individual_sfr_history.py  bfgs_wrapper.py  bundle_history_prediction.py  core_fitting_helpers.py  defaults.py  diffmah_kernels.py  diffmah_tq.py  double_schechter.py  epsilon_sfr_emerge.py  fit_mah_helpers.py  fitting_helpers.py  fq_tng.py  galaxy_quenching.py  halo_assembly.py  halo_history_family.py  halo_mah.py  halo_mass_assembly.py  halo_population_assembly.py  halo_vpeak_evolution.py  in_situ_history.py  in_situ_smh_kernel.py  individual_galaxy_history.py  individual_halo_assembly.py  individual_halo_history.py  individual_sfr_history.py  load_mah_data.py  mah_pop_param_model.py  main_sequence.py  main_sequence_sfr_eff.py  main_sequence_tng.py  mean_mah_relations.py  mean_mah_relations_fitter.py  mean_sfr_history.py  mean_um_relation_model.py  measure_mahs.py  monte_carlo_diffmah_hiz.py  monte_carlo_halo_population.py  monte_carlo_halos.py  (+18 more)
notebooks/: basic_moster17_modeling_demo.ipynb  demo_individual_mah_fitting.ipynb  demo_individual_sfr_history_fitting.ipynb  diffmah_fitter_demo.ipynb  diffmah_halo_populations.ipynb  diffmah_initial_demo.ipynb  fit_individual_mah.py  fit_individual_sfr_history.py  inspect_fit_quality.ipynb  inspect_halo_mah_fits.ipynb  load_small_fits.py  measure_fitting_errors.py  measure_nbody_target_data.ipynb  measure_tng_smhm.ipynb  measure_tng_target_data.ipynb  optimize_nbody_pdf_model.ipynb  (+2 more)
(+333 files in other folders)
